# github-ai-bot

./: .gitignore  README.md  create_zip.py  create_zips.py  gitlike_diff.sh  pem_key_to_env_var.py  requirements.txt
create-pr/: lambda_function.py
example_api_calls/greptile-query/: patch_for_new_file.json
example_api_calls/pr-from-patch/: delete_file.json  modify_file.json  new_file.json  new_file_no_newline.json
function/: lambda_function.py
function_create_pr/: lambda_function.py
function_greptile_query/: create_zip.py  lambda_function.py
function_pr_from_patch/: lambda_function.py
layer_github_ai_bot_lib/: .gitignore  create_zip.py  pyproject.toml
layer_github_ai_bot_lib/src/github_ai_bot/: environment_settings.py  functions.py  github.py  greptile.py  logging.py  patches.py
layer_github_ai_bot_lib/tests/: test_patches.py
layer_github_ai_bot_lib/tests/patch_testcases/add_file/: patch.txt
layer_github_ai_bot_lib/tests/patch_testcases/add_file/before/: my_file.txt
layer_github_ai_bot_lib/tests/patch_testcases/change_single_file/: patch.txt
layer_github_ai_bot_lib/tests/patch_testcases/change_single_file/after_reference/: my_file.txt
layer_greptile_pr_bot_lib/: pyproject.toml
layer_greptile_pr_bot_lib/src/greptile_pr_bot/: functions.py  github.py
layer_greptile_pr_bot_lib/tests/: test_patches.py
python-dynamodb-pydeps/: requirements.txt
